# subsai

./: .gitignore  404.html  BUG_FIX_REPORT_v1.1.0.md  DEPLOYMENT_GUIDE.md  Dockerfile  FONTSIZE_FEATURE_VERIFICATION.md  IMPLEMENTATION_GUIDE.md  KARAOKE_FINAL_FIX_REPORT.md  KARAOKE_TAG_FIX_REPORT.md  KARAOKE_TEST_REPORT.md  README.md  ROTATION_FIX_REPORT.md  TEST_REPORT_v1.1.0-beta.md  VERTICAL_MARGIN_FIX_REPORT.md  WEBUI_KARAOKE_GUIDE.md  batch_update_styles.py  debug_karaoke_tags.py  docker-compose.yml  generate_test_video.py  index.html  objects.inv  pyproject.toml  quick_test.py  requirements.txt  temp_update_styles.py  test_all_form_options_v1.1.0.py  test_aspect_ratio_crop.py  test_auto_wrap_and_spacing.py  test_core_simple.py  test_core_styles_v1.1.0.py  test_ffmpeg_merge.py  test_final.py  test_fontsize_feature.py  test_form_options.md  test_karaoke.py  test_karaoke_auto.py  test_karaoke_debug.py  test_karaoke_endtoend.py  test_karaoke_endtoend_final.py  test_karaoke_stepbystep.py  (+11 more)
docs/: FONT_SIZE_GUIDE.md  QUICKSTART_UNIQUENESS.md  VIDEO_UNIQUENESS_UPGRADE.md
search/: search_index.json
src/: linto-ai-whisper-timestamped_configs.json
src/subsai/: api_service.py  cli.py  configs.py  karaoke_batch.py  karaoke_generator.py  karaoke_styles.py  main.py  video_uniqueness.py  webui.py
src/subsai/models/: stable_ts_model.py  whisper_api_model.py  whispercpp_model.py
test_data/: test.srt
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
